SET(PYRANHA_CELMEC_PYTHON
    __init__.py
    detail.py
    low_thrust.py
)
SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Python" FILES ${PYRANHA_CELMEC_PYTHON}) 
ADD_LIBRARY(_Celmec SHARED ${PYRANHA_CELMEC_PYTHON})
SET_TARGET_PROPERTIES(_Celmec PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(_Celmec PROPERTIES FOLDER "Pyranha")

INSTALL(FILES __init__.py detail.py low_thrust.py DESTINATION ${PYRANHA_INSTALL_PATH}/Celmec/)
