SET(PYRANHA_MATH_HEADERS 
    ../../src/core/math.h
    ../../src/core/mp.h
    ../exceptions.h
)
SET(PYRANHA_MATH_PYTHON
    __init__.py
    )
SOURCE_GROUP(TREE ${CMAKE_CURRENT_LIST_DIR} PREFIX "Python" FILES ${PYRANHA_MATH_PYTHON}) 
ADD_LIBRARY(_Math SHARED Math.cpp ${PYRANHA_MATH_HEADERS} ${PYRANHA_MATH_PYTHON})
PYTHON_CPPMODULE(_Math)
INSTALL(FILES __init__.py DESTINATION ${PYRANHA_INSTALL_PATH}/Math/)
