SET(PYRANHA_TEST_PYTHON
    __init__.py
    detail.py
)
SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Python" FILES ${PYRANHA_TEST_PYTHON}) 
ADD_LIBRARY(_Test SHARED ${PYRANHA_TEST_PYTHON})
SET_TARGET_PROPERTIES(_Test PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(_Test PROPERTIES FOLDER "Pyranha")

INSTALL(FILES __init__.py detail.py DESTINATION ${PYRANHA_INSTALL_PATH}/Test/)
